html rapport downloaden, layout aanpassingen

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -308,8 +308,8 @@ Author: Geonovum, the Netherlands, 2015.
                                         </section>
 
                                         <div id="toolform">
-                                            <h3>Voorvragen</h3>
-                                            <section>
+                                            <h3 class="htmlreport">Voorvragen</h3>
+                                            <section class="htmlreport">
                                                 <h4>Waarom deze voorvragen?</h4>
                                                 <p>Om te voorkomen dat je alle vragen van de tool afwerkt en dan pas tot de ontdekking komt dat dat eigenlijk helemaal niet nodig was geweest, doe je er goed aan eerst een aantal voorvragen te beantwoorden.
                                                     Op basis van de uitkomsten kan je vaststellen of je de tool uberhaupt nodig hebt en ook of je voorgenomen nieuwe gebruik een kans maakt toegestaan te zijn onder de Wbp.</p>
@@ -528,10 +528,10 @@ Author: Geonovum, the Netherlands, 2015.
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="extrabuttons"><a href="javascript:void()" onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
+                                                <div class="extrabuttons"><a onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
                                             </section>
-                                            <h3>Intake</h3>
-                                            <section>
+                                            <h3 class="htmlreport">Intake</h3>
+                                            <section class="htmlreport">
 
                                                 <h4 id="de6intakevragen">De 6 intake-vragen</h4>
                                                 <h5>Waarom deze intake-vragen?</h5>
@@ -647,10 +647,10 @@ Author: Geonovum, the Netherlands, 2015.
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="extrabuttons"><a href="javascript:void()" onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
+                                                <div class="extrabuttons"><a onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
                                             </section>
-                                            <h3>(on)verenigbaarheid</h3>
-                                            <section>
+                                            <h3 class="htmlreport">(on)verenigbaarheid</h3>
+                                            <section class="htmlreport">
                                                 <h4>Waarom deze (on)verenigbaarheidsvragen</h4>
                                                 <p>Nadat je de feiten hebt vastgelegd, kan je overgaan tot het maken van de inschatting of je voorgenomen gebruik niet onverenigbaar is in de zin van artikel 9 Wbp. Die inschatting baseer je op de scores die
                                                     je maakt op de vijf elementen die artikel 9 Wbp noemt, te weten:
@@ -1523,10 +1523,11 @@ Author: Geonovum, the Netherlands, 2015.
                                                         </div>
 
                                                     </div>
-                                                    <div class="extrabuttons"><a href="javascript:void()" onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
+                                                    <div class="extrabuttons"><a onclick="preDownload()" class="btn btn-small" title="Sla de antwoorden op in een bestand, om later opnieuw te gebruiken">Tussentijds opslaan in bestand</a></div>
                                             </section>
-                                            <h3>De uitkomsten</h3>
-                                            <section>
+                                            <h3 class="htmlreport">De uitkomsten</h3>
+                                            <section class="htmlreport">
+                                                <div class="extrabuttons"><a onclick="downloadAsHtml()" class="btn" title="Download de vragen, gegeven antwoorden en het resultaat in een rapport (HTML formaat)">Download rapport (html)</a></div>
                                                 <h4>De uitkomsten van je antwoorden op de (on)verenigbaarheidsvragen en de interpretatie daarvan</h4>
                                                 <h5>De uitkomsten</h5>
                                                 <p>In de grafiek hieronder en de daarbij horende toelichting zie je de scores die je gehaald hebt op de 5 elementen van artikel 9 lid 2 Wbp aan de hand waarvan je kan beoordelen of je voorgenomen verwerking
@@ -1614,6 +1615,7 @@ indien behaalde score &gt; 50% -->
                                                         </div>
                                                     </div>
 
+                                                    <div class="extrabuttons"><a onclick="downloadAsHtml()" class="btn" title="Download de vragen, gegeven antwoorden en het resultaat in een rapport (HTML formaat)">Download rapport (html)</a></div>
 
                                                     <h4>Hoe zijn de uitkomsten verkregen?</h4>
                                                     <p>De percentages zijn het resultaat van, uiteraard, je antwoorden op de vragen, maar ook van het belang van de individuele vragen binnen het element. De tool weegt namelijk het belang van iedere vraag.
@@ -1645,6 +1647,8 @@ indien behaalde score &gt; 50% -->
                                                     <h4>Verdere ontwikkeling</h4>
                                                     <p>Uiteraard is een tool nooit af en kan deze altijd verbeterd worden. Geonovum ontvangt graag suggesties, via <a href="//www.geonovum.nl/feedback-privacytool" target="_blank">het feedback formulier</a>, vanuit het
                                                         veld en zal aan de hand daarvan nagaan of en zo ja in welke vorm een vernieuwde versie gemaakt kan worden.</p>
+
+                                                  <div class="extrabuttons"><a onclick="downloadAsHtml()" class="btn" title="Download de vragen, gegeven antwoorden en het resultaat in een rapport (HTML formaat)">Download rapport (html)</a></div>
                                             </section>
                                             </div>
 
