--- a/src/www/index.html
+++ b/src/www/index.html
@@ -40,10 +40,10 @@ Author: Geonovum, the Netherlands, 2015.
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="https://www.geonovum.nl/sites/default/files/geonovum_favicon.ico" type="image/x-icon" />
 
-    <link type="text/css" rel="stylesheet" href="http://inspirelab.geonovum.nl/smartcities/css/geonovum1.css" media="all" />
-    <link type="text/css" rel="stylesheet" href="http://inspirelab.geonovum.nl/smartcities/css/geonovum2.css" media="all" />
-    <link type="text/css" rel="stylesheet" href="http://inspirelab.geonovum.nl/smartcities/css/geonovum3.css" media="all" />
-    <link type="text/css" rel="stylesheet" href="http://inspirelab.geonovum.nl/smartcities/css/geonovum4.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="css/geonovum1.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="css/geonovum2.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="css/geonovum3.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="css/geonovum4.css" media="all" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
